# rk3588-asr-llm-tts

./: ALSA_CROSS_COMPILE_GUIDE.md  README.txt  build_cross.sh  toolchain.cmake
examples/melotts/cpp/: CMakeLists.txt  cross-compile.sh  main.cc  melotts.h  parse_args.h
examples/rkllm_demo/: CMakeLists.txt  build-linux.sh  main.cc
examples/zipformer/cpp/: CMakeLists.txt  build.sh  main_mic.cc  zipformer.h
examples/zipformer/cpp/rknpu2/: zipformer.cc
examples/zipformer/python/: zipformer.py
utils/: CMakeLists.txt  audio_utils.c  audio_utils.h  wake_word_detector.c  wake_word_detector.h
utils/ipc/: pipeline.cc  pipeline.h
